tests/neg-custom-args/captures/reaches2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches2.scala:10:10 -------------------------------------
10 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |          Found:    (x$1: (A^? ->{ps*} A^?, A^? ->{ps*} A^?)^?) ->{ps*} A^? ->{ps*} A^?
   |          Required: ((A ->{ps*} A, A ->{ps*} A)) -> A^? ->? A^?
   |          Note that capability ps* is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
